--- a/src/content/docs/guides/Beginners/Your First Shader/6_next_steps.mdx
+++ b/src/content/docs/guides/Beginners/Your First Shader/6_next_steps.mdx
@@ -18,12 +18,12 @@ Since our sunlight and skylight colors are constant, things are still very well 
 
 ## Things to Do
 Here are some things you could try adding to your shader next. Some of these are more complex than others, and may require additional research into graphics programming.
-- A custom sky, using a simple gradient based on the time of day, or even a physically based atmosphere.
-- Waving water and foliage.
+- A custom sky, using a simple gradient based on the time of day, or even a physically based atmosphere
+- Waving water and foliage
 - Better shadow filtering, using [interleaved gradient noise](https://blog.demofox.org/2022/01/01/interleaved-gradient-noise-a-different-kind-of-low-discrepancy-sequence/) and a [Vogel disk](https://www.shadertoy.com/view/tddXWl)
 - A [tonemap](https://64.github.io/tonemapping/)
 - Clouds
-- Specular shading, using something like [Blinn-Phong shading](https://learnopengl.com/Advanced-Lighting/Advanced-Lighting) or at a more advanced level, the [Cook-Torrance BRDF](https://learnopengl.com/PBR/Theory).
+- Specular shading, using something like [Blinn-Phong shading](https://learnopengl.com/Advanced-Lighting/Advanced-Lighting) or at a more advanced level, the [Cook-Torrance BRDF](https://learnopengl.com/PBR/Theory)
 - Screen Space Reflections
 - Bloom
 
