--- a/src/content/docs/how_to/Coordinate Spaces.mdx
+++ b/src/content/docs/how_to/Coordinate Spaces.mdx
@@ -8,7 +8,7 @@ sidebar:
 
 At the start of a shader program, the vertex position is provided in the form of `gl_Vertex` (or `VAPosition`). This position is in *model space*. By the time it reaches the fragment shader, the position is in *screen space*. Between these two are a number of other coordinate spaces.
 
-**This page does not cover clip space, NDC space, or screen space, as these are applicable to alll 3D graphics, not just Minecraft.** It is recommended that you also read the [LearnOpenGL article on coordinate systems](https://learnopengl.com/Getting-started/Coordinate-Systems) to gain a good understanding of these other spaces. The [shaderLABS Wiki](https://shaderlabs.org/wiki/Coordinate_Spaces) also has an explanation of different types of transformations, as well as an interactive visualiser of the different spaces.
+**This page does not cover clip space, NDC space, or screen space, as these are applicable to all 3D graphics, not just Minecraft.** It is recommended that you also read the [LearnOpenGL article on coordinate systems](https://learnopengl.com/Getting-started/Coordinate-Systems) to gain a good understanding of these other spaces. The [shaderLABS Wiki](https://shaderlabs.org/wiki/Coordinate_Spaces) also has an explanation of different types of transformations, as well as an interactive visualiser of the different spaces.
 
 ## Space Conversion Cheatsheet
 This page is designed to be read in tandem with this cheatsheet, which shows every space and how to convert between them.
