--- a/src/content/docs/guides/Beginners/Your First Shader/2_gbuffers.mdx
+++ b/src/content/docs/guides/Beginners/Your First Shader/2_gbuffers.mdx
@@ -59,11 +59,11 @@ lmcoord = (lmcoord * 33.05 / 32.0) - (1.05 / 32.0);
 This now gets us the correct light level. You will notice now that if you reload the shader, lighting is now broken. We will fix this later on.
 
 ### `glcolor`
-Some blocks, like grass, have a tint based on their biome, provided in the form of `gl_Color`. If you look in the files for the grass block texture, it is actually grey. To demonstrate this, let's set `glcolor` to `vec4(1.0)`. Since the colour is multiplied by glcolor in the fragment shader, and multiplying by 1 does nothing, this will remove the tint.
+Some blocks, like grass, have a tint based on their biome, provided in the form of `gl_Color`. If you look in the files for the grass block texture, it is actually grey. To demonstrate this, let's set `glcolor` to `vec4(1.0)`. Since the color is multiplied by glcolor in the fragment shader, and multiplying by 1 does nothing, this will remove the tint.
 
 ![](/src/assets/first_shader_guide/notint.webp)
 
-Let's undo that, since having colour is quite nice.
+Let's undo that, since having color is quite nice.
 
 ### Normals
 Before we move onto the fragment shader, there's one more value we'll want to use later - the *normal*. This is a 3 dimensional vector representing the direction the current vertex is facing in. Let's add a new `out` declaration for the normal.
@@ -72,14 +72,18 @@ Before we move onto the fragment shader, there's one more value we'll want to us
 out vec3 normal;
 ```
 
-So how do we get this normal? Well, OpenGL provides it to us with `gl_Normal`. This is in *model space*, though, and for simplicity, we want it in *player space*. This means that the direction is relative to the position of the player, instead of the orientation of the model. In `main`, let's add some code for that. The justification for transforming to world space will be explained later on.
+So how do we get this normal? Well, OpenGL provides it to us with `gl_Normal`. This is in *model space*, though, and for simplicity, we want it in *player space*. This means that the direction is relative to the orientation and position of the player, instead of the model (i.e the chunk being rendered). In `main`, let's add some code for that. The justification for transforming to player space will be explained later on.
+
+:::note[Info]
+Player space and world space may be referred to interchangeably for normals. *Player space* has all positions relative to the player, aligned along the world's x, y, and z axes. World space instead has positions relative to (0,0,0) in the world. Because the orientation of both coordinate spaces is the same, normals (and other direction vectors) are identical between world space and player space.
+:::
 
 ```glsl
 normal = gl_NormalMatrix * gl_Normal; // this gives us the normal in view space
-normal = mat3(gbufferModelViewInverse) * normal; // this converts the normal to world space.
+normal = mat3(gbufferModelViewInverse) * normal; // this converts the normal to world/player space
 ```
 
-If you reload your shader, you will notice that there is an error that we have not defined `gbufferModelViewInverse`. To get this value, we declare it as a *uniform* before the `main` function. Uniforms are accessable by any shader program and have the same value wherever you access them.
+If you reload your shader, you will notice that there is an error that we have not defined `gbufferModelViewInverse`. To get this value, we declare it as a *uniform* before the `main` function. Uniforms are accessable by any shader program and have the same value wherever you access them. They are calculated on the CPU and uploaded to the GPU.
 
 ```glsl
 uniform mat4 gbufferModelViewInverse;
@@ -92,7 +96,7 @@ With those values being passed through, let's move onto the fragment shader (`gb
 This is the texture atlas we mentioned earlier. It contains the textures of all the blocks onscreen, and `texcoord` tells us where in the atlas the current fragment texture is.
 
 ### `lightmap`
-Remember how by default, Minecraft uses a texture with colours for each light level? This texture contains those colours. Since we aren't using the texture anymore, we can get rid of this line.
+Remember how by default, Minecraft uses a texture with colors for each light level? This texture contains those colors. Since we aren't using the texture anymore, we can get rid of this line.
 
 Next, you'll notice that we are writing to `colortex0`. This is generally where most shaders store the main image, with supplementary info in the other buffers. For example, you could store the light levels in `colortex1`, and use them for lighting in `composite`. In fact, we are going to do exactly that.
 
@@ -133,7 +137,7 @@ if (color.a < 0.1) { // alpha test
 
 - The first step multiplies the color by `glcolor` to get the biome tint.
 - The second step multiplies the color by the lighting color. **You should remove this, as we are going to do our own lighting.**
-- Finally, if the colour's alpha (transparency) is less than 0.1, we `discard`, which tells the shader program to return and not write anything. This potentially saves us some texture writes.
+- Finally, if the color's alpha (transparency) is less than 0.1, we `discard`, which tells the shader program to return and not write anything. This potentially saves us some texture writes.
 
 ## Writing Extra Data
 So, since we are going to do lighting in `composite`, we need to send the normal and the lightmap data to it. We do this by storing it in a texture. Let's append our `DRAWBUFFERS` so we can write to more textures, and bind some variables to these other two textures.
@@ -154,6 +158,6 @@ encodedNormal = vec4(normal * 0.5 + 0.5, 1.0);
 
 There are a couple of things here to note. First of all, we *always set the alpha to 1*. This is to ensure that the data always gets written, because if the alpha is 0, Iris may decide that it shouldn't be written anyway. This is because of alpha blending. See [LearnOpenGL's page on blending](https://learnopengl.com/Advanced-OpenGL/Blending) for more info.
 
-Secondly, for each component of the normal, we half it and add a half. Remember how you can't have a negative colour? By default, a texture can only store numbers between 0.0 and 1.0. Since each component can range from `-1.0-1.0`, we need to put it in the 0-1 range.
+Secondly, for each component of the normal, we half it and add a half. Remember how you can't have a negative color? By default, a texture can only store numbers between 0.0 and 1.0. Since each component can range from `-1.0-1.0`, we need to put it in the 0-1 range.
 
 With that said and done, we are set to do some lighting in the composite pass.
