--- a/src/content/docs/guides/Beginners/Your First Shader/0_intro.mdx
+++ b/src/content/docs/guides/Beginners/Your First Shader/0_intro.mdx
@@ -4,7 +4,15 @@ description: Get started creating your first shader
 sidebar:
   label: An Introduction to Shaders
   order: 1
+  badge:
+    text: In Development
+    variant: caution
 ---
+
+:::caution[Warning]
+This tutorial is still being developed. Some statements may be incorrect, and things may change in the future. Got any feedback? [Comment on the tracking issue](https://github.com/IrisShaders/DocsPage/issues/327).
+:::
+
 
 ## Foreward
 This tutorial is based on one written by [saada2006](https://saada2006.github.io/minecraft-shader-tutorials/). This newer tutorial has been necessitated by the fact that since the tutorial was written, the general state of development on Minecraft shaders has advanced somewhat, and other developers have identified several areas where this can be improved.
