--- a/src/content/docs/guides/Beginners/Your First Shader/3_composite_lighting.mdx
+++ b/src/content/docs/guides/Beginners/Your First Shader/3_composite_lighting.mdx
@@ -6,6 +6,10 @@ sidebar:
   order: 3
 ---
 
+:::caution[Warning]
+This tutorial is still being developed. Some statements may be incorrect, and things may change in the future. Got any feedback? [Comment on the tracking issue](https://github.com/IrisShaders/DocsPage/issues/327).
+:::
+
 In this section we will implement basic diffuse shading in the composite pass.
 
 ## Gamma Correction
