--- a/src/content/docs/guides/Beginners/Your First Shader/5_fog.mdx
+++ b/src/content/docs/guides/Beginners/Your First Shader/5_fog.mdx
@@ -6,6 +6,10 @@ sidebar:
   order: 5
 ---
 
+:::caution[Warning]
+This tutorial is still being developed. Some statements may be incorrect, and things may change in the future. Got any feedback? [Comment on the tracking issue](https://github.com/IrisShaders/DocsPage/issues/327).
+:::
+
 In this section we will implement depth based fog, so that things seem to fade into the distance.
 
 ## Another `composite` Pass
