--- a/src/content/docs/guides/Beginners/Your First Shader/6_next_steps.mdx
+++ b/src/content/docs/guides/Beginners/Your First Shader/6_next_steps.mdx
@@ -6,6 +6,10 @@ sidebar:
   order: 5
 ---
 
+:::caution[Warning]
+This tutorial is still being developed. Some statements may be incorrect, and things may change in the future. Got any feedback? [Comment on the tracking issue](https://github.com/IrisShaders/DocsPage/issues/327).
+:::
+
 This is as far as we go with the tutorial, but there's plenty more that can be done with the shader!
 
 ## Issues to Fix
