--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -7,16 +7,16 @@ lastUpdated: false
 prev: false
 next: false
 hero:
-  title: Welcome the to Iris Docs
+  title: Welcome to the Iris Docs
   tagline: Get started building shaders!
   image:
     file: ../../assets/iris.webp
   actions:
     - text: Get Started
-      link: /guides/beginners/start/
+      link: /guides/beginners/your-first-shader/0_intro/
       icon: right-arrow
       variant: primary
-    - text: Read the docs
+    - text: Reference
       link: /reference/overview/
       icon: external
 ---
@@ -45,6 +45,6 @@ A big thanks to the many people below who make this site work. This would not be
 
 - WhyFencePost: Project lead, page design, data transfer
 - NinjaMike: Much of the documentation, including many uniforms, attributes, constants, macros, shaders.properties docs, and more 
-- IMS: Setting up the page, general support of the site and also the URL
+- JoshTheB: Beginner tutorial, howtos, some uniforms, general site improvements
+- IMS: Setting up the page, general support of the site and also the domain
 - Kixys: Main banner image
-- JoshTheB: Added a number of uniforms
