--- a/src/content/docs/guides/Beginners/Your First Shader/4_shadows.mdx
+++ b/src/content/docs/guides/Beginners/Your First Shader/4_shadows.mdx
@@ -257,6 +257,8 @@ If you look at something like stained glass, you'll see that it casts a solid sh
 - `shadowtex1` contains only things which are *fully opaque* and cast a shadow
 - `shadowcolor0` contains the color (including how transparent it is) of things which cast a shadow.
 
+We will of course need to add these other two shadow maps as uniform declarations alongside `shadowtex0`.
+
 With these three shadow maps, we can work out how much shadow is being cast by something, and even what color that shadow should be!
 
 Let's go back to `composite.fsh` and make a new function called `getShadow`. It should take in a `shadowScreenPos` which is of course a `vec3`. As The logic we will use is as follows:
@@ -264,23 +266,23 @@ Let's go back to `composite.fsh` and make a new function called `getShadow`. It 
 ```glsl
 
 vec3 getShadow(vec3 shadowScreenPos){
-	float transparentShadow = step(shadowScreenPos.z, texture(shadowtex0, shadowScreenPos.xy).r);
+	float transparentShadow = step(shadowScreenPos.z, texture(shadowtex0, shadowScreenPos.xy).r); // sample the shadow map containing everything
 
 	// note that a value of 1.0 means 100% of sunlight is getting through, not that there is 100% shadowing
 
-	if(transparentShadow == 1.0){ // no shadow at all
+	if(transparentShadow == 1.0){ // since this shadow map contains everything, there is no shadow at all so we return full sunlight
 		return vec3(1.0);
 	}
 
-	float opaqueShadow = step(shadowScreenPos.z, texture(shadowtex1, shadowScreenPos.xy).r);
+	float opaqueShadow = step(shadowScreenPos.z, texture(shadowtex1, shadowScreenPos.xy).r); // sample the shadow map containing only opaque stuff
 
-	if(opaqueShadow == 0.0){ // opaque shadow so don't sample transparent shadow color
+	if(opaqueShadow == 0.0){ // there is a shadow cast by something opaque, so we return no sunlight
 		return vec3(0.0);
 	}
 
-	vec4 shadowColor = texture(shadowcolor0, shadowScreenPos.xy);
+	vec4 shadowColor = texture(shadowcolor0, shadowScreenPos.xy); // contains the color and alpha (transparency) of the thing casting a shadow
 
-	return shadowColor.rgb * (1.0 - shadowColor.a); // the transparency of the caster is stored in shadowcolor0's alpha component
+	return shadowColor.rgb * (1.0 - shadowColor.a); // we use 1 - the alpha to get how much light is let through and multiply that light by the color of the caster
 }
 ```
 
