feat: several 1.8 beta additions

--- a/src/content/docs/reference/Programs/shadow.mdx
+++ b/src/content/docs/reference/Programs/shadow.mdx
@@ -9,10 +9,22 @@ sidebar:
 **Required stages**: vertex (.vsh), fragment (.fsh)  
 **Optional stages**: geometry (.gsh), tessellation (.tcs, .tes)  
 **Output Buffers**: [shadowcolor](/reference/buffers/shadowcolor), [shadowtex](/reference/buffers/shadowtex)  
-**Valid suffixes**: N/A
+**Valid suffixes**: *N/A*
 
 -------------------------------------------------
 
 Renders world geometry into the shadow buffers, intended for use in shadow mapping.
 
 This program is similar to the [gbuffers](/reference/programs/gbuffers), except it renders terrain from the perspective of the sun or moon. Additionally there is only one shader file for this pass (for the vertex and fragment stages), so all geometry is rendered in `shadow.vsh` and `shadow.fsh`. The type of geometry rendered can be determined with [`renderStage`](/reference/uniforms/general/renderstage) instead. By default, this program renders in an orthographic perspective, this can be changed with [`shadowMapFov`](/reference/constants/shadowmapfov).
+
+
+## Additional Shadow Programs (Iris 1.8+)
+Iris 1.8 adds 5 additional shadow programs. These programs allow rendering of specific geometry with different shader code, similar to [gbuffers](/reference/programs/gbuffers). If any of these programs are not present, the geometry will be rendered in the base `shadow` program, and if that program is not present a default shader will be used.
+
+| Shadow Program    | Geometry that it renders |
+| ----------------- | ------------------------ |
+| `shadow_solid`    | solid terrain            |
+| `shadow_cutout`   | cutout terrain           |
+| `shadow_water`    | translucent terrain      |
+| `shadow_entities` | entities and beacon beam |
+| `shadow_block`    | block entities           |
