--- a/src/content/docs/reference/Macros/IRIS_VERSION.mdx
+++ b/src/content/docs/reference/Macros/IRIS_VERSION.mdx
@@ -11,9 +11,9 @@ sidebar:
 
 ### `IRIS_VERSION`
 
-The current Iris version, encoded in a 122 format (1 major, 2 minor, 2 release).
+The current Iris version, encoded in a 122 format (1 major, 2 minor, 2 release). This macro was added in Iris 1.8, and as such no earlier versions will be defined.
 
 For example:
-- 1.5.0 -> 10500
+- 1.8.0 -> 10800
 - 1.6.17 -> 10617
 - 1.7.3 -> 10703
