Added all uniform categories

--- a/src/content/docs/reference/Uniforms/General/maxPlayerArmor.mdx
+++ b/src/content/docs/reference/Uniforms/General/maxPlayerArmor.mdx
@@ -9,6 +9,6 @@ sidebar:
     variant: tip
 ---
 
-### `uniform float maxPlayer;`
+### `uniform float maxPlayerArmour;`
 
 This value stores the maximum player armor value. This is the internal value used by Minecraft, not the number of armor icons in the user interface. In a default world this value is `50` unless changed by mods.
