--- a/src/content/docs/reference/Uniforms/General/currentRenderedItemId.mdx
+++ b/src/content/docs/reference/Uniforms/General/currentRenderedItemId.mdx
@@ -13,7 +13,7 @@ sidebar:
 
 Iris allows detecting items and armor during rendering on *anything*.
 
-Using `uniform int currentRenderedItemId;`, you can detect items and armor rendered in the level at the point of render (based on [`item.properties`](/reference/miscellaneous/item_properties)). This is similar to [`heldItemId`](/reference/uniforms/general/helditemid) and [`heldItemId2`](/reference/uniforms/general/helditemid2), except it applies to the currently rendered item/armor instead of the held item.
+Using `uniform int currentRenderedItemId;`, you can detect items and armor rendered in the level at the point of render (based on [`item.properties`](/reference/miscellaneous/item_properties) for items and armour, and [`block.properties`](/reference/miscellaneous/block_properties) for block items). This is similar to [`heldItemId`](/reference/uniforms/general/helditemid) and [`heldItemId2`](/reference/uniforms/general/helditemid2), except it applies to the currently rendered item/armor instead of the held item.
 
 There are some new ID's that can be detected alongside items and armor:
 
